--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-bootstrap-sweetalert": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
+    "recordrtc": "^5.6.2",
     "sweetalert": "^2.1.2"
   },
   "devDependencies": {
@@ -33,6 +35,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "tailwindcss": "^3.4.4",
     "vite": "^5.2.0"
   }
 }
